[metadata]
name = psireact
version = 0.2.15
url = https://github.com/mortonne/psireact
author = Neal Morton
author_email = mortonne@gmail.com
description = PsiReact: Response time modeling of psychology experiments
long_description = file: README.md
long_description_content_type = text/markdown
keywords = psychology, modeling
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    seaborn
    arviz
    aesara
    pymc3
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
